# tshet-uinh-encoder-python

./: .gitignore  .pylintrc  .readthedocs.yml  README.md  index.html  pyproject.toml  requirements.txt  setup.py  反切.html  常量.html  音韻地位.html
.github/workflows/: documentation.yml  publish.yml  test.yml
docs/: QieyunEncoder.rst  conf.py  index.rst  requirements.txt  工具.rst  常量.rst  說明.rst  變換.rst  轉換.rst  音韻地位.rst  韻鏡位置.rst
src/QieyunEncoder/: __init__.py  _拓展音韻屬性.py  _母對應的標準等.py  _音位配列規則表.py  encoder.py  反切.py  常量.py  音韻地位.py  韻鏡位置.py
src/QieyunEncoder/工具/: __init__.py  反切.py  正則化韻.py  母到清濁.py  母到組.py  母到音.py  母與等到類.py  音韻地位到韻鏡位置.py  音韻屬性到韻鏡位置們.py  韻到攝.py  韻目到韻.py  韻鏡位置到音韻地位.py
src/QieyunEncoder/變換/: __init__.py  母到清濁.py  母到組.py  母到音.py  母與等到類.py  韻到攝.py  韻目到韻.py
src/QieyunEncoder/轉換/: __init__.py  正則化韻.py  母到組.py  母與等到類.py  韻到攝.py  韻目到韻.py
src/TshetUinhEncoder/: __init__.py  常量.py  音韻地位.py
src/TshetUinhEncoder/轉換/: 母到清濁.py  母到音.py  韻目到韻.py
test/: examples.txt  main.py
tests/: examples.txt  main.py  test.py
tests/QieyunEncoder/: 常量.py  轉換.py  音韻地位.py
tests/TshetUinhEncoder/: 常量.py  轉換.py  音韻地位.py
工具/: index.html  反切.html  正則化韻.html
