[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "tshet-uinh-encoder"
authors = [
  { name="nk2028 Developers", email="support@nk2028.shn.hk" },
]
description = "A Python library for the operating the basic structure of the Tshet-uinh phonological system"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    'Development Status :: 4 - Beta',
    "Programming Language :: Python :: 3",
    'License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication',
    'Topic :: Text Processing :: Linguistic',
    'Natural Language :: Chinese (Traditional)',
    "Operating System :: OS Independent",
]
dependencies = []
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/nk2028/tshet-uinh-encoder-python"
Issues = "https://github.com/nk2028/tshet-uinh-encoder-python/issues"

[tool.setuptools.dynamic]
version = {attr = "TshetUinhEncoder.__version__"}
